Fix after rebase problems